    October 3 at 00:00.  (Thanks to Konstantin Hypp?nen.)

  Changes affecting code

    'localtime', 'mktime', etc. now use much less stack space if ALL_STATE
    is defined.  (Thanks to Elliott Hughes for reporting the problem.)

    Error diagnostics of 'zic' and 'yearistype' have been reworded so that
    they no longer use ASCII '-' as if it were a dash.

    Some lint has been removed when using GCC_DEBUG_FLAGS with GCC 4.9.0.

  Changes affecting documentation and commentary

    Documentation and commentary now prefer UTF-8 to US-ASCII,
    allowing the use of proper accents in foreign words and names.
    Code and data have not changed because of this.
    (Thanks to Garrett Wollman and Ian Abbott for helping to debug this.)

    Non-HTML documentation and commentary now use plain-text URLs instead of
    HTML insertions, and are more consistent about bracketing URLs when they
    are not already surrounded by white space.  (Thanks to suggestions by
    Steffen Nurpmeso.)

    In zone.tab, Pacific/Easter no longer mentions Salas y G?mez, as it
    is uninhabited.

    Commentary about permanent Antarctic bases has been updated.

    Several typos have been corrected.  (Thanks to Tim Parenti for
    contributing some of these fixes.)

    The files usno1988, usno1989, usno1989a, usno1995, usno1997, and usno1998
    have been removed.  These obsolescent US Naval Observatory entries were no
    longer helpful for maintenance.  (Thanks to Tim Parenti for the suggestion.)


Release 2014e - 2014-06-12 21:53:52 -0700

  Changes affecting near-future time stamps

    Egypt's 2014 Ramadan-based transitions are June 26 and July 31 at 24:00.
    (Thanks to Imed Chihi.)  Guess that from 2015 on Egypt will temporarily
    switch to standard time at 24:00 the last Thursday before Ramadan, and
    back to DST at 00:00 the first Friday after Ramadan.

    Similarly, Morocco's are June 28 at 03:00 and August 2 at 02:00.  (Thanks