@@ -15,9 +15,15 @@ Unreleased, experimental changes
     Error diagnostics of 'zic' and 'yearistype' have been reworded so that
     they no longer use ASCII '-' as if it were a dash.
 
+    'zic -v' now warns about output file names that do not follow POSIX rules,
+    or that contain a digit or a file name component of '.' or '..'.
+
     Some lint has been removed when using GCC_DEBUG_FLAGS with GCC 4.9.0.
 
   Changes affecting documentation and commentary
+
+    The 'Theory' file documents the longstanding exceptions to the
+    POSIX file name rules that are in 'etcetera' and 'backward'.
 
     Documentation and commentary now prefer UTF-8 to US-ASCII,
     allowing the use of proper accents in foreign words and names.
